--- a/scratch.Rmd
+++ b/scratch.Rmd
@@ -5,6 +5,9 @@ date: "2/15/2020"
 output: html_document
 ---
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
 
 
 ```{r}
@@ -17,6 +20,7 @@ library(shinythemes)
 library(tmap)
 library(sf)
 library(leaflet)
+
 crops<- read_csv("Total_Crops.csv")
 ```
 
@@ -278,6 +282,15 @@ ggplot(data = nic_mango, aes(x = Practice, y = mean_soc))+
 
 ```
 
+```{r}
+
+  
+
+
+
+
+
+```
 
 
 
