--- a/scratch.Rmd
+++ b/scratch.Rmd
@@ -291,7 +291,10 @@ ghg_break_down<- crops %>%
             mean_N2O = mean(N2O_CO2e)) %>% 
   filter(Practice == "Organic" |
          Practice == "Regenrative")
-  
+
+
+ghg_break_down %>% 
+  gather(mean_CO2, mean_CH4, mean_N2O)
 
   
 
